# ThePankeyEngine-Base

./: AllocatorFactory.hpp  AppState.hpp  Array.hpp  Array2.hpp  ArrayIterator.hpp  ArrayList.hpp  ArrayPointer.hpp  ArrayPointerHelper.hpp  ArrayRawList.hpp  ArrayRawMap.hpp  ArrayRawPointerList.hpp  ArrayRawPointerMap.hpp  BaseAppState.hpp  BaseIAppState.hpp  BaseIState.hpp  BaseState.hpp  Byte.hpp  ByteArray.hpp  CHANGELOG.md  CMakeLists.txt  Cast.hpp  CharArray.hpp  CharArrayHelper.hpp  CharPointer.hpp  ClassCount.hpp  ClassMethodNamesEnable.hpp  ClassType.hpp  Combined.hpp  CombinedInstance.hpp  CombinedMutate.hpp  Command.hpp  CommandReturn.hpp  ErrorHandler.hpp  ErrorHandler_status.hpp  Function - copia.hpp  GlobalEvents.hpp  IntervalAppState.hpp  InvokeCommandList.hpp  InvokeFunction.hpp  InvokeMethod.hpp  (+40 more)
examples/Arduino_class_examples/AppState_examples - copia/AppState_example_1/: AppState_example_1.ino
examples/Arduino_class_examples/AppState_examples/AppState_example_1/: AppState_example_1.ino
tests/Arduino_Tests/Base_Testing/: Base_Testing.ino  TR_ArrayPointer_Testing.hpp  TR_Array_Testing.hpp  TR_CharArray_Testing.hpp  TR_GlobalEvents_Testing.hpp  TR_InvokeMethod_Testing.hpp  TR_InvokeRawList_Testing.hpp  TR_InvokeRawMap_Testing.hpp  TR_MemoryAllocator_Testing.hpp  TR_MemorySize_Testing.hpp  TR_RawPointerList_Testing.hpp  TR_StaticAllocatorInstance_Testing.hpp  TR_TPC_Testing.hpp  TR_TemplateMemoryAllocator_Testing.hpp  TR_TypeListManager_Testing.hpp  TR_TypePointerListManager_Testing.hpp
(+41 files in other folders)
